add more stuff, i didn't remember

--- a/exam.html
+++ b/exam.html
@@ -139,26 +139,34 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="exam-manager">
-                            <div id="close-manager"  class="btn-close"><span><img src="./assets/icons/icons8-timer-30.png"></span></div>
-                            <div class="timer-area">
-                                <span>Thời gian: </span>
-                                <span id="clock" class="timer"></span>
-                            </div>
-                            <div class="timer-area test-id">
-                                <span>Bộ đề: </span>
-                                <span id="test-id" class="id">981</span>
-                            </div>
-                            <div class="flag">
-                                <h5>Quản lý câu hỏi</h5>
-                                <table id="flag-list">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="exam-manager">
+                                    <div id="close-manager" class="btn-close"><span><img
+                                                src="./assets/icons/icons8-timer-30.png"></span></div>
+                                    <div class="timer-area">
+                                        <span>Thời gian: </span>
+                                        <span id="clock" class="timer"></span>
+                                    </div>
+                                    <div class="timer-area test-id">
+                                        <span>Bộ đề: </span>
+                                        <span id="test-id" class="id">981</span>
+                                    </div>
+                                    <div class="flag">
+                                        <h5>Quản lý câu hỏi</h5>
+                                        <table id="flag-list">
 
-                                </table>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
-                        <div>
-                            <button id="submit-test">Nộp bài</button>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="submit-area">
+                                    <a id="submit-test">Nộp bài</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
