Adding feature add question

--- a/exam.html
+++ b/exam.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/styles/exam.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="/assets/styles/font-face.css">
 </head>
 
 <body>
