--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
 
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr class="first">
                                     <td>1</td>
                                     <td>Nguyễn Niê Đức Thịnh</td>
                                     <td>Đăk Lăk</td>
                                     <td>100</td>
                                 </tr>
-                                <tr>
+                                <tr class="second">
                                     <td>2</td>
                                     <td>Trần Bảo An</td>
                                     <td>Hà Giang</td>
                                     <td>98</td>
                                 </tr>
-                                <tr>
+                                <tr class="third">
                                     <td>3</td>
                                     <td>Lê Trung Đại</td>
                                     <td>Lào Cai</td>
