--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Trang chủ | Kỳ thi Hương Quốc gia</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    
 </head>
 
 <body>
@@ -34,7 +35,10 @@
                 <div class="menu-bar noselect">
                     <ul class="main-nav ">
                         <li>
-                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                            <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -45,9 +49,7 @@
                         <li>
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
-                        <li>
-                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                        </li>
+
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
@@ -55,7 +57,10 @@
                     <ul id="mySidenav" class="main-nav-mob">
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <li>
-                                <a class="main-nav__home img-rounded" href="#">Home</a>
+                                <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -66,9 +71,7 @@
                             <li>
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
-                            <li>
-                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                            </li>
+
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                             </li>
@@ -216,7 +219,7 @@
     </footer>
     <script
     src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/exam-page/mobile-menu-close.js"></script>
+    <!-- <script src="assets/js/exam-page/mobile-menu-close.js"></script> -->
     <script src="./assets/js/navigation.js">
     </script>
      <script src="./assets/js/change-bg.js">
