--- a/my-result.html
+++ b/my-result.html
@@ -5,26 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Kết quả của thí sinh</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link rel="stylesheet" href="./assets/styles/exam.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+   
 </head>
 
 <body>
     <!-- div maker -->
     <div>
         <!--Desktop Nav bar-->
-        <nav class="nav-desktop exam-nav">
+        <nav class="nav-desktop ">
             <div class="container">
                 <div class="logo-area">
                     <a href="./index.html">
                         <div class="logo">
-                            <img src="../assets/img/resources/logo.png" alt="">
+                            <img src="./assets/img/resources/logo.png" alt="">
                         </div>
                         <div class="web-name noselect">
                             Kỳ thi Hương Quốc gia
@@ -32,9 +33,12 @@
                     </a>
                 </div>
                 <div class="menu-bar noselect">
-                    <ul class="main-nav">
+                    <ul class="main-nav ">
                         <li>
-                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                            <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -45,9 +49,7 @@
                         <li>
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
-                        <li>
-                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                        </li>
+
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
@@ -55,7 +57,10 @@
                     <ul id="mySidenav" class="main-nav-mob">
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <li>
-                                <a class="main-nav__home img-rounded" href="#">Home</a>
+                                <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -66,17 +71,15 @@
                             <li>
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
-                            <li>
-                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                            </li>
+
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                             </li>
                         </ul>
                 </div>
                 <div id="btn-open-menu" class="btn-menu">
-                        <img src="./assets/icons/three-dot-menu.png">
-                    </div>
+                    <img src="./assets/icons/three-dot-menu.png">
+                </div>
             </div>
         </nav>
     </div>
