--- a/signup.html
+++ b/signup.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Đăng ký tài khoản</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 
 <body>
@@ -20,20 +20,23 @@
                 <div class="logo-area">
                     <a href="./index.html">
                         <div class="logo">
-                            <img src="../assets/img/resources/logo.png" alt="">
+                            <img src="./assets/img/resources/logo.png" alt="">
                         </div>
                         <div class="web-name noselect">
-                                Kỳ thi Hương Quốc gia
+                            Kỳ thi Hương Quốc gia
                         </div>
                     </a>
                 </div>
                 <div class="menu-bar noselect">
-                    <ul class="main-nav">
+                    <ul class="main-nav ">
                         <li>
-                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                            <a class="main-nav__home img-rounded" href="./index.html">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="#"> Rank</a>
+                            <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
@@ -41,9 +44,7 @@
                         <li>
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
-                        <li>
-                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                        </li>
+
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
@@ -51,10 +52,13 @@
                     <ul id="mySidenav" class="main-nav-mob">
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <li>
-                                <a class="main-nav__home img-rounded" href="#">Home</a>
+                                <a class="main-nav__home img-rounded" href="./index.html">Home</a>
                             </li>
                             <li>
-                                <a class="main-nav__rank img-rounded" href="#golden-rank"> Rank</a>
+                                <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                             </li>
                             <li>
                                 <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
@@ -62,17 +66,15 @@
                             <li>
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
-                            <li>
-                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                            </li>
+
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                             </li>
                         </ul>
                 </div>
                 <div id="btn-open-menu" class="btn-menu">
-                        <img src="./assets/icons/three-dot-menu.png">
-                    </div>
+                    <img src="./assets/icons/three-dot-menu.png">
+                </div>
             </div>
         </nav>
     </div>
@@ -98,7 +100,7 @@
                                 </form>
                             </div>
                             <div class="nb-card-foot">
-                                <div>Đã có tài khoản? <a href=#>Đăng nhập</a></div>
+                                <div>Đã có tài khoản? <a href='./login.html'>Đăng nhập</a></div>
 
                             </div>
                         </div>
