--- a/login.html
+++ b/login.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Đăng nhập</title>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/styles.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+   
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                 <div class="logo-area">
                     <a href="./index.html">
                         <div class="logo">
-                            <img src="../assets/img/resources/logo.png" alt="">
+                            <img src="./assets/img/resources/logo.png" alt="">
                         </div>
                         <div class="web-name noselect">
                             Kỳ thi Hương Quốc gia
@@ -29,9 +30,12 @@
                     </a>
                 </div>
                 <div class="menu-bar noselect">
-                    <ul class="main-nav">
+                    <ul class="main-nav ">
                         <li>
-                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                            <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -42,9 +46,7 @@
                         <li>
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
-                        <li>
-                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                        </li>
+
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
@@ -52,7 +54,10 @@
                     <ul id="mySidenav" class="main-nav-mob">
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <li>
-                                <a class="main-nav__home img-rounded" href="#">Home</a>
+                                <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -63,17 +68,15 @@
                             <li>
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
-                            <li>
-                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                            </li>
+
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                             </li>
-                        </ul>            
+                        </ul>
                 </div>
                 <div id="btn-open-menu" class="btn-menu">
-                        <img src="./assets/icons/three-dot-menu.png">
-                    </div>
+                    <img src="./assets/icons/three-dot-menu.png">
+                </div>
             </div>
         </nav>
 
