--- a/select-exam.html
+++ b/select-exam.html
@@ -5,35 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Chọn đề</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link rel="stylesheet" href="./assets/styles/exam.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+   
 </head>
 
 <body>
     <!-- div maker -->
     <div>
         <!--Desktop Nav bar-->
-        <nav class="nav-desktop exam-nav">
+        <nav class="nav-desktop ">
             <div class="container">
                 <div class="logo-area">
                     <a href="./index.html">
                         <div class="logo">
-                            <img src="../assets/img/resources/logo.png" alt="">
+                            <img src="./assets/img/resources/logo.png" alt="">
                         </div>
-                        <div class="web-name">
+                        <div class="web-name noselect">
                             Kỳ thi Hương Quốc gia
                         </div>
                     </a>
                 </div>
                 <div class="menu-bar noselect">
-                    <ul class="main-nav">
+                    <ul class="main-nav ">
                         <li>
-                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                            <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
@@ -44,34 +48,33 @@
                         <li>
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
-                        <li>
-                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                        </li>
+
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
                     </ul>
                     <ul id="mySidenav" class="main-nav-mob">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <li>
-                            <a class="main-nav__home img-rounded" href="#">Home</a>
-                        </li>
-                        <li>
-                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
-                        </li>
-                        <li>
-                            <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
-                        </li>
-                        <li>
-                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
-                        </li>
-                        <li>
-                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
-                        </li>
-                        <li>
-                            <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
-                        </li>
-                    </ul>
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <li>
+                                <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                            </li>
+
+                            <li>
+                                <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
+                            </li>
+                        </ul>
                 </div>
                 <div id="btn-open-menu" class="btn-menu">
                     <img src="./assets/icons/three-dot-menu.png">
@@ -87,7 +90,7 @@
                         <div class="avt-name">
                             <div class="avt">
                                 <div class="img-wraper">
-                                    <img src="/assets/img/user/icons8-customer-64.png" />
+                                    <img src="./assets/img/user/icons8-customer-64.png" />
                                 </div>
                             </div>
                             <div class="name-info ">
@@ -137,119 +140,119 @@
                 <h3> <span class="note">Chú ý:</span> Thí sinh <strong>chỉ</strong> được chọn 1 đề thi bên dưới</h3>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>123</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>342</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>251</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>324</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>485</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>512</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>642</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>701</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>888</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>894</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./exam.html">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
