--- a/exam.html
+++ b/exam.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bài thi | Kỳ thi hương Quốc gia</title>
 
-    <link rel="stylesheet" href="./bower_components/bootstrap-4.1/bootstrap.min.css">
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/styles.css">
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <!-- <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" /> -->
+        
     <link rel="stylesheet" href="/assets/styles/font-face.css">
 </head>
 
