--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trang chủ | Kỳ thi Hương Quốc gia</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
+
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -201,7 +201,6 @@
                             </tbody>
                         </table>
                         <div>
-                            Hello
                         </div>
                     </div>
                 </div>
