--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Đăng nhập</title>
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
+
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/styles.css">
    
@@ -15,7 +15,7 @@
 
 <body>
     <!-- div maker -->
-    <div >
+    <header >
         <!--Desktop Nav bar-->
         <nav class="nav-desktop ">
             <div class="container">
@@ -79,9 +79,9 @@
                 </div>
             </div>
         </nav>
+    </header>
 
-    </div>
-    <div class="wraper-bg">
+    <main class="wraper-bg">
         <div class="div-outer">
             <div class="container outer-wraper outer-wraper-100vh justify-content-center">
                 <div class="row">
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-    </div>
+    </main>
     
     <footer>
         Powered by thinhnnd & thupx
