--- a/my-result.html
+++ b/my-result.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kết quả của thí sinh</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link rel="stylesheet" href="./assets/styles/exam.css">
@@ -18,7 +17,7 @@
 
 <body>
     <!-- div maker -->
-    <div>
+    <header>
         <!--Desktop Nav bar-->
         <nav class="nav-desktop ">
             <div class="container">
@@ -82,7 +81,7 @@
                 </div>
             </div>
         </nav>
-    </div>
+    </header>
     <main class="container main-select-exam">
         <div class="row">
             <div class="col-12">
@@ -165,14 +164,17 @@
             </div>
         </div>
     </main>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
+    <!-- Some scripts -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
     <!-- <script src="assets/js/exam-page/countdown.js"></script>
   <script src="assets/js/exam-page/load-flag.js"></script>
   <script src="assets/js/exam-page/test-load.js"></script> -->
   <script src="./assets/js/navigation.js">
   </script>
+
+    <!-- Footer  -->
     <footer>
         Powered by thinhnnd & thupx
     </footer>
