--- a/select-exam.html
+++ b/select-exam.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chọn đề</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link rel="stylesheet" href="./assets/styles/exam.css">
@@ -17,7 +16,7 @@
 
 <body>
     <!-- div maker -->
-    <div>
+    <header>
         <!--Desktop Nav bar-->
         <nav class="nav-desktop ">
             <div class="container">
@@ -81,7 +80,7 @@
                 </div>
             </div>
         </nav>
-    </div>
+    </header>
     <main class="container main-select-exam">
         <div class="row">
             <div class="col-12">
