--- a/signup.html
+++ b/signup.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Đăng ký tài khoản</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
+
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 
 <body>
-    <div class="wraper-bg">
+    <header class="wraper-bg">
         <!--Desktop Nav bar-->
         <nav class="nav-desktop ">
             <div class="container">
@@ -77,9 +77,9 @@
                 </div>
             </div>
         </nav>
-    </div>
+    </header>
     <!-- div maker -->
-    <div class="wraper-bg">
+    <main class="wraper-bg">
         <div class="div-outer">
             <div class="container outer-wraper outer-wraper-100vh justify-content-center">
                 <div class="row">
@@ -111,11 +111,15 @@
             </div>
         </div>
 
-    </div>
+    </main>
+
+    <!-- Footer  -->
 
     <footer>
         Powered by thinhnnd & thupx
     </footer>
+
+    <!-- Some Scripts -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <script src="./assets/js/navigation.js">
