--- a/add-question.html
+++ b/add-question.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thêm câu hỏi | Kỳ thi hương quốc gia</title>
+
+    <!--assets-->
     <link rel="stylesheet" href="./bower_components/bootstrap-4.1/bootstrap.min.css">
+    <link rel="stylesheet" href="./bower_components/font-awesome-5/css/fontawesome-all.min.css" />
     <link href="./assets/styles/web-admin.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+ 
 
 </head>
 
@@ -58,15 +60,13 @@
             </div>
         </div>
         <div class="child app-main">
-            <div id="left-menu" class="child menu showing-slide">
+            <div id="left-menu" class="child menu">
                 <ul>
-                    <li><i class="fas fa-bell"></i>Dashboard</li>
+                    <li><a href="./dashboard.html"><i class="fas fa-bell"></i>Dashboard</a> </li>
                     <!-- <li><i class="fas fa-plus-circle"></i>Tạo đề thi</li> -->
-                    <li><i class="fas fa-list-alt"></i>Quản lý đề thi</li>
-                    <li><i class="fas fa-user"></i>Danh sách thí sinh</li>
-                    <li><i class="fas fa-bell"></i>Thông báo</li>
-                    <li><i class="fas fa-running"></i>Khác</li>
-
+                    <li><a href="./exam-management.html"><i class="fas fa-list-alt"></i>Quản lý đề thi</a></li>
+                    <li><a href="#"><i class="fas fa-user"></i>Danh sách thí sinh</a></li>
+                    <li><a href="#"><i class="fas fa-bell"></i>Thông báo</a></li>
                 </ul>
             </div>
             <div id="content" class="child content">
@@ -77,7 +77,7 @@
                                 <div class="card-header">
                                     <h5>Tổng quan</h5>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body" style="background-color: #F2E7D3">
                                     <div id="question-place" class="container-fluid">
 
                                     </div>
