add icon, add meta tags,..

--- a/add-question.html
+++ b/add-question.html
@@ -8,6 +8,7 @@
     <title>Thêm câu hỏi | Kỳ thi hương quốc gia</title>
 
     <!--assets-->
+    <link href="./assets/icons/logo.ico" rel="shortcut icon" type="image/x-icon"/>
     <link rel="stylesheet" href="./bower_components/bootstrap-4.1/bootstrap.min.css">
     <link rel="stylesheet" href="./bower_components/font-awesome-5/css/fontawesome-all.min.css" />
     <link href="./assets/styles/web-admin.css" rel="stylesheet">
