--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trang quản trị</title>
+
+    <link href="./assets/icons/logo.ico" rel="shortcut icon" type="image/x-icon"/>
     <link rel="stylesheet" href="./bower_components/bootstrap-4.1/bootstrap.min.css">
     <link rel="stylesheet" href="./bower_components/font-awesome-5/css/fontawesome-all.min.css" />
 
