--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-language" content="vi" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Trang web chính thức của kỳ thi Hương" >
+    <meta name="keywords" content="thi hương, kỳ thi hương, thi hương thời lê, thi trắc nghiệm, bảng vàng, đỗ đạt, làm quan, hiền tài là nguyên khí quốc gia, hiền tài, Lê Đại Hành, thi quoc gia, hien tai la nguyen khi quoc gia, thi, thi huong, nha le, ky thi huong" >
+    <meta name="revisit-after" content="1 days" />
+    <meta name="robots" content="noodp,index,follow" />
+
     <title>Trang chủ | Kỳ thi Hương Quốc gia</title>
+
+    <link href="./assets/icons/logo.ico" rel="shortcut icon" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
-
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -125,7 +132,7 @@
                     </div>
                     <div class="user-rank">
                         <div>
-                            Danh sách các thí sinh đỗ đạt làm quan
+                            <h3 style="text-align: center; margin-bottom: 10px;">Danh sách các thí sinh đỗ đạt làm quan</h3>
                         </div>
                         <table>
                             <thead>
