--- a/exam.html
+++ b/exam.html
@@ -11,7 +11,8 @@
     <meta name="keywords" content="thi hương, kỳ thi hương, thi hương thời lê, thi trắc nghiệm, bảng vàng, đỗ đạt, làm quan, hiền tài là nguyên khí quốc gia, hiền tài, Lê Đại Hành, thi quoc gia, hien tai la nguyen khi quoc gia, thi, thi huong, nha le, ky thi huong" >
     <meta name="revisit-after" content="1 days" />
     <meta name="robots" content="noodp,index,follow" />
-
+    <meta name="google-site-verification" content="hLKr7AIG0s_bxOvFV534GESJnOVFfBtZbyoz8yid97Q" />
+    
     <title>Bài thi | Kỳ thi hương Quốc gia</title>
     
     <link href="./assets/icons/logo.ico" rel="shortcut icon" type="image/x-icon"/>
